# SaleSight

./: .gitignore  CMakeLists.txt  README.md  SaleSightExceptions.hpp  SalesData.cpp  SalesData.hpp  SalesDataTest.cpp  SalesRecord.hpp  main.cpp  util.cpp  util.hpp
